# speaking-app-streamlit

./: .gitignore  README.md  pyproject.toml
src/speaking_app_streamlit/: app.py
src/speaking_app_streamlit/audio_recorder_component/: index.html  main.js  package.json  style.css
